# flightmare_agile_autonomy

./: .gitignore  CMakeLists.txt  README.md  dependencies.yaml
examples/example_control/: CMakeLists.txt  package.xml
examples/example_control/include/heading_controller/: heading_controller.h
examples/example_control/launch/: multi.launch  multi_quad.launch  multi_quad_with_camera.launch  quad.launch  quad_waypoints.launch  quad_with_camera.launch  quad_with_stereo_camera.launch  sim_multi_vehicle.launch  sim_multi_vehicle_and_rgb_camera.launch  sim_single_vehicle.launch  sim_single_vehicle_and_rgb_camera.launch  sim_single_vehicle_and_rgb_camera_trajcetory_with_waypoints.launch  sim_single_vehicle_and_stereo_camera.launch  sim_single_vehicle_heading_controller.launch  single.launch  single_stereo.launch
examples/example_control/rviz/: multi_quad_with_camera.rviz  single_vehicle_with_rgb_camera.rviz  single_vehicle_with_stereo_camera.rviz
examples/example_control/src/: multi_agent.cpp  multi_quad.cpp  multi_quad_with_camera.cpp  multi_vehicle.cpp  multi_vehicle_and_rgb_camera.cpp  quad.cpp  single_agent.cpp  single_stereo_agent.cpp  single_vehicle.cpp  single_vehicle_and_rgb_camera.cpp  single_vehicle_and_rgb_camera_trajectory_with_waypoints.cpp  single_vehicle_and_stereo_camera.cpp  single_vehicle_heading_controller.cpp
examples/example_control/src/heading_controller/: heading_controller.cpp
examples/example_control/src/trajectory/: fig8_trajectory.cpp  trajectory.cpp
examples/example_multiagent/: CMakeLists.txt  package.xml
examples/example_multiagent/include/trajectory/: trajectory.h
examples/example_multiagent/launch/: simulator.launch
examples/example_multiagent/src/: main.cpp
examples/example_pcd/: CMakeLists.txt  package.xml
examples/example_pcd/launch/: pcd_pub.launch
examples/example_pcd/src/: pcd_pub.cpp
rpgq_command_bridge/: CMakeLists.txt  package.xml
rpgq_command_bridge/include/rpgq_command_bridge/: rpgq_command_bridge.h
rpgq_command_bridge/launch/: rpgq_command_bridge_client.launch  rpgq_command_bridge_server.launch
rpgq_command_bridge/src/: rpgq_command_bridge.cpp  rpgq_command_bridge_node.cpp
rpgq_common/: CMakeLists.txt  package.xml
rpgq_common/include/rpgq_common/: quadrotor_id.h  rpgq.h
rpgq_common/include/rpgq_common/circular_buffer/: circular_buffer.h  circular_buffer_timestamped.h
rpgq_common/include/rpgq_common/msgs/: command_msg_helper.h
rpgq_common/include/rpgq_common/network/: cobs.h  crc.h
rpgq_common/include/rpgq_common/opengl/: filesystem.h  mesh.h  model.h  shader.h
rpgq_common/include/rpgq_common/parameters/: parameters.h
rpgq_common/include/rpgq_common/serial_port/: serial_port.h
rpgq_common/include/rpgq_common/time/: base_timer.h  ext_timer.h  timer.h
rpgq_common/include/rpgq_common/types/: state_6dof.h
rpgq_common/src/msgs/: command_msg_helper.cpp
rpgq_common/src/network/: cobs.cpp
rpgq_common/src/serial_port/: serial_port.cpp
rpgq_components/: CMakeLists.txt  package.xml
rpgq_components/include/rpgq_components/controller/: low_level_offboard_controller.h
rpgq_components/include/rpgq_components/estimator/: optitrack_estimator.h
rpgq_components/include/rpgq_components/onboard/: onboard_logic.h  onboard_states.h  state_machine.h
rpgq_components/src/controller/: low_level_offboard_controller.cpp
rpgq_components/src/estimator/: optitrack_estimator.cpp
rpgq_components/src/onboard/: onboard_logic.cpp  state_machine.cpp
rpgq_msgs/: CMakeLists.txt  package.xml
rpgq_msgs/msg/: Command.msg  CommandSet.msg  Lidar.msg
rpgq_quad_interface/: CMakeLists.txt  package.xml  setup.py
rpgq_quad_interface/launch/: base_quad_simulation.launch  rpgq_quad_interface.launch
rpgq_quad_interface/node/: run_mlp_controller.py
rpgq_simulator/: CMakeLists.txt  package.xml
rpgq_simulator/configuration/: root_directory.h.in
rpgq_simulator/include/rpgq_simulator/: simulator.h  simulator_types.h
rpgq_simulator/include/rpgq_simulator/framework/actuators/: base_actuator.h
rpgq_simulator/include/rpgq_simulator/framework/dynamics/: base_dynamics.h
rpgq_simulator/include/rpgq_simulator/framework/objects/: base_object.h  composite_object.h  directly_controlled_object.h  indirectly_controlled_object.h  physical_object.h
rpgq_simulator/include/rpgq_simulator/framework/onboard_code/: base_onboard_code.h
rpgq_simulator/include/rpgq_simulator/framework/sensors/: base_sensor.h
rpgq_simulator/include/rpgq_simulator/framework/unity/: unity_object.h
rpgq_simulator/include/rpgq_simulator/implementation/actuators/: motor.h
rpgq_simulator/include/rpgq_simulator/implementation/sensors/: event_camera.h  imu.h  lidar.h  optitrack.h  rgb_camera.h
rpgq_simulator/include/rpgq_simulator/implementation/unity/: unity_gate.h
rpgq_simulator/include/rpgq_simulator/tools/: elevation_finder.h  env_changer.h  json.hpp  point_cloud_generator.h
rpgq_simulator/include/rpgq_simulator/visualization/: flightmare_bridge.hpp  flightmare_message_types.hpp  visualizer.h
rpgq_simulator/resources/objects/quadrotor_vehicle/: quadrotor_vehicle.mtl
rpgq_simulator/resources/objects/soccer_ball/: soccer_ball.mtl
rpgq_simulator/resources/scenes/arena/: arena.mtl
rpgq_simulator/resources/scenes/default/: empty_world.mtl
rpgq_simulator/src/: simulator.cpp
rpgq_simulator/src/framework/objects/: composite_object.cpp  directly_controlled_object.cpp  indirectly_controlled_object.cpp
rpgq_simulator/src/implementation/actuators/: motor.cpp
rpgq_simulator/src/implementation/objects/quadrotor_vehicle/: quad_and_event_camera.cpp  quad_and_lidar.cpp  quad_and_rgb_camera.cpp  quad_and_stereo_event_camera.cpp  quad_and_stereo_rgb_camera.cpp  quadrotor_dynamics.cpp  (+2 more)
rpgq_simulator/src/implementation/sensors/: event_camera.cpp  imu.cpp  lidar.cpp  optitrack.cpp  rgb_camera.cpp
rpgq_simulator/src/implementation/unity/: unity_gate.cpp
rpgq_simulator/src/tools/: elevation_finder.cpp  env_changer.cpp  point_cloud_generator.cpp
rpgq_simulator/src/visualization/: flightmare_bridge.cpp  shader.frag  visualizer.cpp
(+28 files in other folders)
