<?xml version="1.0"?>
<package format="2">
	<name>rpgq_msgs</name>
	<version>0.0.0</version>
	<description>Custom RPG messages.</description>
	
	<maintainer email="brescianini@ifi.uzh.ch">Dario Brescianini</maintainer>
	<license>GNU GPL</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>catkin_simple</buildtool_depend>

	<build_depend>message_generation</build_depend>
	
	<depend>std_msgs</depend>
	
</package>
