<?xml version="1.0"?>
<package format="2">
  <name>rpgq_quad_interface</name>
  <version>0.0.1</version>
  <description>RPG quadrotor control interface</description>
  <license>TODO</license>
  
  <maintainer email="song@ifi.uzh.ch">Yunlong Song</maintainer>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  
  <export>
    <!-- 
    gazebo_ros_paths_plugin automatically adds these to
    GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
    the package.xml file. You can than use URIs of type model://my_package/stuff.
    -->
    <gazebo_ros
      gazebo_plugin_path="${prefix}/lib"
      gazebo_model_path="${prefix}/.."
      gazebo_resource_path="${prefix}/.." /> 
  </export>
  
</package>